yapl/y_2_Conflict.output
Terminals unused in grammar

    TER_OP


State 27 conflicts: 1 shift/reduce
State 341 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 primary_expression: IDENTIFIER
    2                   | constant
    3                   | string
    4                   | '(' expression ')'
    5                   | generic_selection

    6 constant: I_CONSTANT
    7         | F_CONSTANT
    8         | ENUMERATION_CONSTANT

    9 enumeration_constant: IDENTIFIER

   10 string: STRING_LITERAL
   11       | FUNC_NAME

   12 generic_selection: GENERIC '(' assignment_expression ',' generic_assoc_list ')'

   13 generic_assoc_list: generic_association
   14                   | generic_assoc_list ',' generic_association

   15 generic_association: type_name ':' assignment_expression
   16                    | DEFAULT ':' assignment_expression

   17 postfix_expression: primary_expression
   18                   | postfix_expression '[' expression ']'
   19                   | postfix_expression '(' argument_expression_list_opt ')'
   20                   | postfix_expression '.' IDENTIFIER
   21                   | postfix_expression PTR_OP IDENTIFIER
   22                   | postfix_expression INC_OP
   23                   | postfix_expression DEC_OP
   24                   | '(' type_name ')' '{' initializer_list '}'
   25                   | '(' type_name ')' '{' initializer_list ',' '}'

   26 argument_expression_list_opt: ε
   27                             | argument_expression_list

   28 argument_expression_list: assignment_expression
   29                         | argument_expression_list ',' assignment_expression

   30 unary_expression: postfix_expression
   31                 | INC_OP unary_expression
   32                 | DEC_OP unary_expression
   33                 | unary_operator cast_expression
   34                 | SIZEOF unary_expression
   35                 | SIZEOF '(' type_name ')'
   36                 | ALIGNOF '(' type_name ')'

   37 unary_operator: '&'
   38               | '*'
   39               | '+'
   40               | '-'
   41               | '~'
   42               | '!'

   43 cast_expression: unary_expression
   44                | '(' type_name ')' cast_expression

   45 multiplicative_expression: cast_expression
   46                          | multiplicative_expression '*' cast_expression
   47                          | multiplicative_expression '/' cast_expression
   48                          | multiplicative_expression '%' cast_expression

   49 additive_expression: multiplicative_expression
   50                    | additive_expression '+' multiplicative_expression
   51                    | additive_expression '-' multiplicative_expression

   52 shift_expression: additive_expression
   53                 | shift_expression LEFT_OP additive_expression
   54                 | shift_expression RIGHT_OP additive_expression

   55 relational_expression: shift_expression
   56                      | relational_expression '<' shift_expression
   57                      | relational_expression '>' shift_expression
   58                      | relational_expression LE_OP shift_expression
   59                      | relational_expression GE_OP shift_expression
   60                      | relational_expression TH_OP shift_expression

   61 equality_expression: relational_expression
   62                    | equality_expression EQ_OP relational_expression
   63                    | equality_expression NE_OP relational_expression

   64 and_expression: equality_expression
   65               | and_expression '&' equality_expression

   66 exclusive_or_expression: and_expression
   67                        | exclusive_or_expression '^' and_expression

   68 inclusive_or_expression: exclusive_or_expression
   69                        | inclusive_or_expression '|' exclusive_or_expression

   70 logical_and_expression: inclusive_or_expression
   71                       | logical_and_expression AND_OP inclusive_or_expression

   72 logical_or_expression: logical_and_expression
   73                      | logical_or_expression OR_OP logical_and_expression

   74 conditional_expression: logical_or_expression
   75                       | logical_or_expression '?' expression ':' conditional_expression

   76 assignment_expression: conditional_expression
   77                      | unary_expression assignment_operator assignment_expression

   78 assignment_operator: '='
   79                    | MUL_ASSIGN
   80                    | DIV_ASSIGN
   81                    | MOD_ASSIGN
   82                    | ADD_ASSIGN
   83                    | SUB_ASSIGN
   84                    | LEFT_ASSIGN
   85                    | RIGHT_ASSIGN
   86                    | AND_ASSIGN
   87                    | XOR_ASSIGN
   88                    | OR_ASSIGN
   89                    | PEQ_OP
   90                    | MEQ_OP
   91                    | STREQ_OP
   92                    | DEQ_OP
   93                    | MODEQ_OP

   94 expression: assignment_expression
   95           | expression ',' assignment_expression

   96 constant_expression: conditional_expression

   97 declaration: declaration_specifiers ';'
   98            | declaration_specifiers init_declarator_list ';'
   99            | static_assert_declaration

  100 declaration_specifiers: storage_class_specifier declaration_specifiers
  101                       | storage_class_specifier
  102                       | type_specifier declaration_specifiers
  103                       | type_specifier
  104                       | type_qualifier declaration_specifiers
  105                       | type_qualifier
  106                       | function_specifier declaration_specifiers
  107                       | function_specifier
  108                       | alignment_specifier declaration_specifiers
  109                       | alignment_specifier

  110 init_declarator_list: init_declarator
  111                     | init_declarator_list ',' init_declarator

  112 init_declarator: declarator '=' initializer
  113                | declarator

  114 storage_class_specifier: TYPEDEF
  115                        | EXTERN
  116                        | STATIC
  117                        | THREAD_LOCAL
  118                        | AUTO
  119                        | REGISTER

  120 type_specifier: VOID
  121               | CHAR
  122               | SHORT
  123               | INT
  124               | LONG
  125               | FLOAT
  126               | DOUBLE
  127               | SIGNED
  128               | UNSIGNED
  129               | BOOL
  130               | COMPLEX
  131               | IMAGINARY
  132               | atomic_type_specifier
  133               | struct_or_union_specifier
  134               | enum_specifier
  135               | TYPEDEF_NAME

  136 struct_or_union_specifier: struct_or_union '{' struct_declaration_list '}'
  137                          | struct_or_union IDENTIFIER '{' struct_declaration_list '}'
  138                          | struct_or_union IDENTIFIER

  139 struct_or_union: STRUCT
  140                | UNION

  141 struct_declaration_list: struct_declaration
  142                        | struct_declaration_list struct_declaration

  143 struct_declaration: specifier_qualifier_list ';'
  144                   | specifier_qualifier_list struct_declarator_list ';'
  145                   | static_assert_declaration

  146 specifier_qualifier_list: type_specifier specifier_qualifier_list
  147                         | type_specifier
  148                         | type_qualifier specifier_qualifier_list
  149                         | type_qualifier

  150 struct_declarator_list: struct_declarator
  151                       | struct_declarator_list ',' struct_declarator

  152 struct_declarator: ':' constant_expression
  153                  | declarator ':' constant_expression
  154                  | declarator

  155 enum_specifier: ENUM '{' enumerator_list '}'
  156               | ENUM '{' enumerator_list ',' '}'
  157               | ENUM IDENTIFIER '{' enumerator_list '}'
  158               | ENUM IDENTIFIER '{' enumerator_list ',' '}'
  159               | ENUM IDENTIFIER

  160 enumerator_list: enumerator
  161                | enumerator_list ',' enumerator

  162 enumerator: enumeration_constant '=' constant_expression
  163           | enumeration_constant

  164 atomic_type_specifier: ATOMIC '(' type_name ')'

  165 type_qualifier: CONST
  166               | RESTRICT
  167               | VOLATILE
  168               | ATOMIC

  169 function_specifier: INLINE
  170                   | NORETURN

  171 alignment_specifier: ALIGNAS '(' type_name ')'
  172                    | ALIGNAS '(' constant_expression ')'

  173 $@1: ε

  174 declarator: pointer $@1 direct_declarator
  175           | direct_declarator

  176 direct_declarator: IDENTIFIER
  177                  | '(' declarator ')'
  178                  | direct_declarator '[' ']'
  179                  | direct_declarator '[' '*' ']'
  180                  | direct_declarator '[' STATIC type_qualifier_list assignment_expression ']'
  181                  | direct_declarator '[' STATIC assignment_expression ']'
  182                  | direct_declarator '[' type_qualifier_list '*' ']'
  183                  | direct_declarator '[' type_qualifier_list STATIC assignment_expression ']'
  184                  | direct_declarator '[' type_qualifier_list assignment_expression ']'
  185                  | direct_declarator '[' type_qualifier_list ']'
  186                  | direct_declarator '[' assignment_expression ']'
  187                  | direct_declarator '(' parameter_type_list ')'
  188                  | direct_declarator '(' ')'
  189                  | direct_declarator '(' identifier_list ')'

  190 pointer: '*' type_qualifier_list pointer
  191        | '*' type_qualifier_list
  192        | '*' pointer
  193        | '*'

  194 type_qualifier_list: type_qualifier
  195                    | type_qualifier_list type_qualifier

  196 parameter_type_list: parameter_list ',' ELLIPSIS
  197                    | parameter_list

  198 parameter_list: parameter_declaration
  199               | parameter_list ',' parameter_declaration

  200 parameter_declaration: declaration_specifiers declarator
  201                      | declaration_specifiers abstract_declarator
  202                      | declaration_specifiers

  203 identifier_list: IDENTIFIER
  204                | identifier_list ',' IDENTIFIER

  205 type_name: specifier_qualifier_list abstract_declarator
  206          | specifier_qualifier_list

  207 abstract_declarator: pointer direct_abstract_declarator
  208                    | pointer
  209                    | direct_abstract_declarator

  210 direct_abstract_declarator: '(' abstract_declarator ')'
  211                           | '[' ']'
  212                           | '[' '*' ']'
  213                           | '[' STATIC type_qualifier_list assignment_expression ']'
  214                           | '[' STATIC assignment_expression ']'
  215                           | '[' type_qualifier_list STATIC assignment_expression ']'
  216                           | '[' type_qualifier_list assignment_expression ']'
  217                           | '[' type_qualifier_list ']'
  218                           | '[' assignment_expression ']'
  219                           | direct_abstract_declarator '[' ']'
  220                           | direct_abstract_declarator '[' '*' ']'
  221                           | direct_abstract_declarator '[' STATIC type_qualifier_list assignment_expression ']'
  222                           | direct_abstract_declarator '[' STATIC assignment_expression ']'
  223                           | direct_abstract_declarator '[' type_qualifier_list assignment_expression ']'
  224                           | direct_abstract_declarator '[' type_qualifier_list STATIC assignment_expression ']'
  225                           | direct_abstract_declarator '[' type_qualifier_list ']'
  226                           | direct_abstract_declarator '[' assignment_expression ']'
  227                           | '(' ')'
  228                           | '(' parameter_type_list ')'
  229                           | direct_abstract_declarator '(' ')'
  230                           | direct_abstract_declarator '(' parameter_type_list ')'

  231 initializer: '{' initializer_list '}'
  232            | '{' initializer_list ',' '}'
  233            | assignment_expression

  234 initializer_list: designation initializer
  235                 | initializer
  236                 | initializer_list ',' designation initializer
  237                 | initializer_list ',' initializer

  238 designation: designator_list '='

  239 designator_list: designator
  240                | designator_list designator

  241 designator: '[' constant_expression ']'
  242           | '.' IDENTIFIER

  243 static_assert_declaration: STATIC_ASSERT '(' constant_expression ',' STRING_LITERAL ')' ';'

  244 statement: labeled_statement
  245          | compound_statement
  246          | expression_statement
  247          | selection_statement
  248          | iteration_statement
  249          | jump_statement

  250 labeled_statement: IDENTIFIER ':' statement
  251                  | CASE constant_expression ':' statement
  252                  | DEFAULT ':' statement

  253 compound_statement: '{' '}'
  254                   | '{' block_item_list '}'

  255 block_item_list: block_item
  256                | block_item_list block_item

  257 block_item: declaration
  258           | statement

  259 expression_statement: ';'
  260                     | expression ';'

  261 $@2: ε

  262 selection_statement: IF '(' expression ')' statement ELSE $@2 statement
  263                    | IF '(' expression ')' statement
  264                    | SWITCH '(' expression ')' statement

  265 iteration_statement: WHILE '(' expression ')' statement
  266                    | DO statement WHILE '(' expression ')' ';'
  267                    | FOR '(' expression_statement expression_statement ')' statement
  268                    | FOR '(' expression_statement expression_statement expression ')' statement
  269                    | FOR '(' declaration expression_statement ')' statement
  270                    | FOR '(' declaration expression_statement expression ')' statement

  271 jump_statement: GOTO IDENTIFIER ';'
  272               | CONTINUE ';'
  273               | BREAK ';'
  274               | RETURN ';'
  275               | RETURN expression ';'

  276 translation_unit: external_declaration
  277                 | translation_unit external_declaration

  278 external_declaration: function_definition
  279                     | declaration

  280 function_definition: declaration_specifiers declarator declaration_list compound_statement
  281                    | declaration_specifiers declarator compound_statement

  282 declaration_list: declaration
  283                 | declaration_list declaration


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 42
    '%' (37) 48
    '&' (38) 37 65
    '(' (40) 4 12 19 24 25 35 36 44 164 171 172 177 187 188 189 210 227 228 229 230 243 262 263 264 265 266 267 268 269 270
    ')' (41) 4 12 19 24 25 35 36 44 164 171 172 177 187 188 189 210 227 228 229 230 243 262 263 264 265 266 267 268 269 270
    '*' (42) 38 46 179 182 190 191 192 193 212 220
    '+' (43) 39 50
    ',' (44) 12 14 25 29 95 111 151 156 158 161 196 199 204 232 236 237 243
    '-' (45) 40 51
    '.' (46) 20 242
    '/' (47) 47
    ':' (58) 15 16 75 152 153 250 251 252
    ';' (59) 97 98 143 144 243 259 260 266 271 272 273 274 275
    '<' (60) 56
    '=' (61) 78 112 162 238
    '>' (62) 57
    '?' (63) 75
    '[' (91) 18 178 179 180 181 182 183 184 185 186 211 212 213 214 215 216 217 218 219 220 221 222 223 224 225 226 241
    ']' (93) 18 178 179 180 181 182 183 184 185 186 211 212 213 214 215 216 217 218 219 220 221 222 223 224 225 226 241
    '^' (94) 67
    '{' (123) 24 25 136 137 155 156 157 158 231 232 253 254
    '|' (124) 69
    '}' (125) 24 25 136 137 155 156 157 158 231 232 253 254
    '~' (126) 41
    error (256)
    IDENTIFIER (258) 1 9 20 21 137 138 157 158 159 176 203 204 242 250 271
    I_CONSTANT (259) 6
    F_CONSTANT (260) 7
    STRING_LITERAL (261) 10 243
    FUNC_NAME (262) 11
    SIZEOF (263) 34 35
    PTR_OP (264) 21
    INC_OP (265) 22 31
    DEC_OP (266) 23 32
    LEFT_OP (267) 53
    RIGHT_OP (268) 54
    LE_OP (269) 58
    GE_OP (270) 59
    EQ_OP (271) 62
    NE_OP (272) 63
    TH_OP (273) 60
    PEQ_OP (274) 89
    MEQ_OP (275) 90
    STREQ_OP (276) 91
    DEQ_OP (277) 92
    MODEQ_OP (278) 93
    TER_OP (279)
    AND_OP (280) 71
    OR_OP (281) 73
    MUL_ASSIGN (282) 79
    DIV_ASSIGN (283) 80
    MOD_ASSIGN (284) 81
    ADD_ASSIGN (285) 82
    SUB_ASSIGN (286) 83
    LEFT_ASSIGN (287) 84
    RIGHT_ASSIGN (288) 85
    AND_ASSIGN (289) 86
    XOR_ASSIGN (290) 87
    OR_ASSIGN (291) 88
    TYPEDEF_NAME (292) 135
    ENUMERATION_CONSTANT (293) 8
    TYPEDEF (294) 114
    EXTERN (295) 115
    STATIC (296) 116 180 181 183 213 214 215 221 222 224
    AUTO (297) 118
    REGISTER (298) 119
    INLINE (299) 169
    CONST (300) 165
    RESTRICT (301) 166
    VOLATILE (302) 167
    BOOL (303) 129
    CHAR (304) 121
    SHORT (305) 122
    INT (306) 123
    LONG (307) 124
    SIGNED (308) 127
    UNSIGNED (309) 128
    FLOAT (310) 125
    DOUBLE (311) 126
    VOID (312) 120
    COMPLEX (313) 130
    IMAGINARY (314) 131
    STRUCT (315) 139
    UNION (316) 140
    ENUM (317) 155 156 157 158 159
    ELLIPSIS (318) 196
    CASE (319) 251
    DEFAULT (320) 16 252
    IF <val> (321) 262 263
    ELSE <val> (322) 262
    SWITCH (323) 264
    WHILE (324) 265 266
    DO (325) 266
    FOR (326) 267 268 269 270
    GOTO (327) 271
    CONTINUE (328) 272
    BREAK (329) 273
    RETURN (330) 274 275
    ALIGNAS (331) 171 172
    ALIGNOF (332) 36
    ATOMIC (333) 164 168
    GENERIC (334) 12
    NORETURN (335) 170
    STATIC_ASSERT (336) 243
    THREAD_LOCAL (337) 117
    IFX (338)


Nonterminals, with rules where they appear

    $accept (108)
        on left: 0
    primary_expression (109)
        on left: 1 2 3 4 5
        on right: 17
    constant (110)
        on left: 6 7 8
        on right: 2
    enumeration_constant (111)
        on left: 9
        on right: 162 163
    string (112)
        on left: 10 11
        on right: 3
    generic_selection (113)
        on left: 12
        on right: 5
    generic_assoc_list (114)
        on left: 13 14
        on right: 12 14
    generic_association (115)
        on left: 15 16
        on right: 13 14
    postfix_expression (116)
        on left: 17 18 19 20 21 22 23 24 25
        on right: 18 19 20 21 22 23 30
    argument_expression_list_opt (117)
        on left: 26 27
        on right: 19
    argument_expression_list (118)
        on left: 28 29
        on right: 27 29
    unary_expression (119)
        on left: 30 31 32 33 34 35 36
        on right: 31 32 34 43 77
    unary_operator (120)
        on left: 37 38 39 40 41 42
        on right: 33
    cast_expression (121)
        on left: 43 44
        on right: 33 44 45 46 47 48
    multiplicative_expression (122)
        on left: 45 46 47 48
        on right: 46 47 48 49 50 51
    additive_expression (123)
        on left: 49 50 51
        on right: 50 51 52 53 54
    shift_expression (124)
        on left: 52 53 54
        on right: 53 54 55 56 57 58 59 60
    relational_expression (125)
        on left: 55 56 57 58 59 60
        on right: 56 57 58 59 60 61 62 63
    equality_expression (126)
        on left: 61 62 63
        on right: 62 63 64 65
    and_expression (127)
        on left: 64 65
        on right: 65 66 67
    exclusive_or_expression (128)
        on left: 66 67
        on right: 67 68 69
    inclusive_or_expression (129)
        on left: 68 69
        on right: 69 70 71
    logical_and_expression (130)
        on left: 70 71
        on right: 71 72 73
    logical_or_expression (131)
        on left: 72 73
        on right: 73 74 75
    conditional_expression (132)
        on left: 74 75
        on right: 75 76 96
    assignment_expression (133)
        on left: 76 77
        on right: 12 15 16 28 29 77 94 95 180 181 183 184 186 213 214 215 216 218 221 222 223 224 226 233
    assignment_operator (134)
        on left: 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93
        on right: 77
    expression (135)
        on left: 94 95
        on right: 4 18 75 95 260 262 263 264 265 266 268 270 275
    constant_expression (136)
        on left: 96
        on right: 152 153 162 172 241 243 251
    declaration (137)
        on left: 97 98 99
        on right: 257 269 270 279 282 283
    declaration_specifiers (138)
        on left: 100 101 102 103 104 105 106 107 108 109
        on right: 97 98 100 102 104 106 108 200 201 202 280 281
    init_declarator_list (139)
        on left: 110 111
        on right: 98 111
    init_declarator (140)
        on left: 112 113
        on right: 110 111
    storage_class_specifier (141)
        on left: 114 115 116 117 118 119
        on right: 100 101
    type_specifier (142)
        on left: 120 121 122 123 124 125 126 127 128 129 130 131 132 133 134 135
        on right: 102 103 146 147
    struct_or_union_specifier (143)
        on left: 136 137 138
        on right: 133
    struct_or_union (144)
        on left: 139 140
        on right: 136 137 138
    struct_declaration_list (145)
        on left: 141 142
        on right: 136 137 142
    struct_declaration (146)
        on left: 143 144 145
        on right: 141 142
    specifier_qualifier_list (147)
        on left: 146 147 148 149
        on right: 143 144 146 148 205 206
    struct_declarator_list (148)
        on left: 150 151
        on right: 144 151
    struct_declarator (149)
        on left: 152 153 154
        on right: 150 151
    enum_specifier (150)
        on left: 155 156 157 158 159
        on right: 134
    enumerator_list (151)
        on left: 160 161
        on right: 155 156 157 158 161
    enumerator (152)
        on left: 162 163
        on right: 160 161
    atomic_type_specifier (153)
        on left: 164
        on right: 132
    type_qualifier (154)
        on left: 165 166 167 168
        on right: 104 105 148 149 194 195
    function_specifier (155)
        on left: 169 170
        on right: 106 107
    alignment_specifier (156)
        on left: 171 172
        on right: 108 109
    declarator (157)
        on left: 174 175
        on right: 112 113 153 154 177 200 280 281
    $@1 (158)
        on left: 173
        on right: 174
    direct_declarator (159)
        on left: 176 177 178 179 180 181 182 183 184 185 186 187 188 189
        on right: 174 175 178 179 180 181 182 183 184 185 186 187 188 189
    pointer (160)
        on left: 190 191 192 193
        on right: 174 190 192 207 208
    type_qualifier_list (161)
        on left: 194 195
        on right: 180 182 183 184 185 190 191 195 213 215 216 217 221 223 224 225
    parameter_type_list (162)
        on left: 196 197
        on right: 187 228 230
    parameter_list (163)
        on left: 198 199
        on right: 196 197 199
    parameter_declaration (164)
        on left: 200 201 202
        on right: 198 199
    identifier_list (165)
        on left: 203 204
        on right: 189 204
    type_name (166)
        on left: 205 206
        on right: 15 24 25 35 36 44 164 171
    abstract_declarator (167)
        on left: 207 208 209
        on right: 201 205 210
    direct_abstract_declarator (168)
        on left: 210 211 212 213 214 215 216 217 218 219 220 221 222 223 224 225 226 227 228 229 230
        on right: 207 209 219 220 221 222 223 224 225 226 229 230
    initializer (169)
        on left: 231 232 233
        on right: 112 234 235 236 237
    initializer_list (170)
        on left: 234 235 236 237
        on right: 24 25 231 232 236 237
    designation (171)
        on left: 238
        on right: 234 236
    designator_list (172)
        on left: 239 240
        on right: 238 240
    designator (173)
        on left: 241 242
        on right: 239 240
    static_assert_declaration (174)
        on left: 243
        on right: 99 145
    statement (175)
        on left: 244 245 246 247 248 249
        on right: 250 251 252 258 262 263 264 265 266 267 268 269 270
    labeled_statement (176)
        on left: 250 251 252
        on right: 244
    compound_statement (177)
        on left: 253 254
        on right: 245 280 281
    block_item_list (178)
        on left: 255 256
        on right: 254 256
    block_item (179)
        on left: 257 258
        on right: 255 256
    expression_statement (180)
        on left: 259 260
        on right: 246 267 268 269 270
    selection_statement (181)
        on left: 262 263 264
        on right: 247
    $@2 (182)
        on left: 261
        on right: 262
    iteration_statement (183)
        on left: 265 266 267 268 269 270
        on right: 248
    jump_statement (184)
        on left: 271 272 273 274 275
        on right: 249
    translation_unit (185)
        on left: 276 277
        on right: 0 277
    external_declaration (186)
        on left: 278 279
        on right: 276 277
    function_definition (187)
        on left: 280 281
        on right: 278
    declaration_list (188)
        on left: 282 283
        on right: 280 283


State 0

    0 $accept: • translation_unit $end

    TYPEDEF_NAME   shift, and go to state 1
    TYPEDEF        shift, and go to state 2
    EXTERN         shift, and go to state 3
    STATIC         shift, and go to state 4
    AUTO           shift, and go to state 5
    REGISTER       shift, and go to state 6
    INLINE         shift, and go to state 7
    CONST          shift, and go to state 8
    RESTRICT       shift, and go to state 9
    VOLATILE       shift, and go to state 10
    BOOL           shift, and go to state 11
    CHAR           shift, and go to state 12
    SHORT          shift, and go to state 13
    INT            shift, and go to state 14
    LONG           shift, and go to state 15
    SIGNED         shift, and go to state 16
    UNSIGNED       shift, and go to state 17
    FLOAT          shift, and go to state 18
    DOUBLE         shift, and go to state 19
    VOID           shift, and go to state 20
    COMPLEX        shift, and go to state 21
    IMAGINARY      shift, and go to state 22
    STRUCT         shift, and go to state 23
    UNION          shift, and go to state 24
    ENUM           shift, and go to state 25
    ALIGNAS        shift, and go to state 26
    ATOMIC         shift, and go to state 27
    NORETURN       shift, and go to state 28
    STATIC_ASSERT  shift, and go to state 29
    THREAD_LOCAL   shift, and go to state 30

    declaration                go to state 31
    declaration_specifiers     go to state 32
    storage_class_specifier    go to state 33
    type_specifier             go to state 34
    struct_or_union_specifier  go to state 35
    struct_or_union            go to state 36
    enum_specifier             go to state 37
    atomic_type_specifier      go to state 38
    type_qualifier             go to state 39
    function_specifier         go to state 40
    alignment_specifier        go to state 41
    static_assert_declaration  go to state 42
    translation_unit           go to state 43
    external_declaration       go to state 44
    function_definition        go to state 45


State 1

  135 type_specifier: TYPEDEF_NAME •

    $default  reduce using rule 135 (type_specifier)


State 2

  114 storage_class_specifier: TYPEDEF •

    $default  reduce using rule 114 (storage_class_specifier)


State 3

  115 storage_class_specifier: EXTERN •

    $default  reduce using rule 115 (storage_class_specifier)


State 4

  116 storage_class_specifier: STATIC •

    $default  reduce using rule 116 (storage_class_specifier)


State 5

  118 storage_class_specifier: AUTO •

    $default  reduce using rule 118 (storage_class_specifier)


State 6

  119 storage_class_specifier: REGISTER •

    $default  reduce using rule 119 (storage_class_specifier)


State 7

  169 function_specifier: INLINE •

    $default  reduce using rule 169 (function_specifier)


State 8

  165 type_qualifier: CONST •

    $default  reduce using rule 165 (type_qualifier)


State 9

  166 type_qualifier: RESTRICT •

    $default  reduce using rule 166 (type_qualifier)


State 10

  167 type_qualifier: VOLATILE •

    $default  reduce using rule 167 (type_qualifier)


State 11

  129 type_specifier: BOOL •

    $default  reduce using rule 129 (type_specifier)


State 12

  121 type_specifier: CHAR •

    $default  reduce using rule 121 (type_specifier)


State 13

  122 type_specifier: SHORT •

    $default  reduce using rule 122 (type_specifier)


State 14

  123 type_specifier: INT •

    $default  reduce using rule 123 (type_specifier)


State 15

  124 type_specifier: LONG •

    $default  reduce using rule 124 (type_specifier)


State 16

  127 type_specifier: SIGNED •

    $default  reduce using rule 127 (type_specifier)


State 17

  128 type_specifier: UNSIGNED •

    $default  reduce using rule 128 (type_specifier)


State 18

  125 type_specifier: FLOAT •

    $default  reduce using rule 125 (type_specifier)


State 19

  126 type_specifier: DOUBLE •

    $default  reduce using rule 126 (type_specifier)


State 20

  120 type_specifier: VOID •

    $default  reduce using rule 120 (type_specifier)


State 21

  130 type_specifier: COMPLEX •

    $default  reduce using rule 130 (type_specifier)


State 22

  131 type_specifier: IMAGINARY •

    $default  reduce using rule 131 (type_specifier)


State 23

  139 struct_or_union: STRUCT •

    $default  reduce using rule 139 (struct_or_union)


State 24

  140 struct_or_union: UNION •

    $default  reduce using rule 140 (struct_or_union)


State 25

  155 enum_specifier: ENUM • '{' enumerator_list '}'
  156               | ENUM • '{' enumerator_list ',' '}'
  157               | ENUM • IDENTIFIER '{' enumerator_list '}'
  158               | ENUM • IDENTIFIER '{' enumerator_list ',' '}'
  159               | ENUM • IDENTIFIER

    IDENTIFIER  shift, and go to state 46
    '{'         shift, and go to state 47


State 26

  171 alignment_specifier: ALIGNAS • '(' type_name ')'
  172                    | ALIGNAS • '(' constant_expression ')'

    '('  shift, and go to state 48


State 27

  164 atomic_type_specifier: ATOMIC • '(' type_name ')'
  168 type_qualifier: ATOMIC •

    '('  shift, and go to state 49

    '('       [reduce using rule 168 (type_qualifier)]
    $default  reduce using rule 168 (type_qualifier)


State 28

  170 function_specifier: NORETURN •

    $default  reduce using rule 170 (function_specifier)


State 29

  243 static_assert_declaration: STATIC_ASSERT • '(' constant_expression ',' STRING_LITERAL ')' ';'

    '('  shift, and go to state 50


State 30

  117 storage_class_specifier: THREAD_LOCAL •

    $default  reduce using rule 117 (storage_class_specifier)


State 31

  279 external_declaration: declaration •

    $default  reduce using rule 279 (external_declaration)


State 32

   97 declaration: declaration_specifiers • ';'
   98            | declaration_specifiers • init_declarator_list ';'
  280 function_definition: declaration_specifiers • declarator declaration_list compound_statement
  281                    | declaration_specifiers • declarator compound_statement

    IDENTIFIER  shift, and go to state 51
    '('         shift, and go to state 52
    '*'         shift, and go to state 53
    ';'         shift, and go to state 54

    init_declarator_list  go to state 55
    init_declarator       go to state 56
    declarator            go to state 57
    direct_declarator     go to state 58
    pointer               go to state 59


State 33

  100 declaration_specifiers: storage_class_specifier • declaration_specifiers
  101                       | storage_class_specifier •

    TYPEDEF_NAME  shift, and go to state 1
    TYPEDEF       shift, and go to state 2
    EXTERN        shift, and go to state 3
    STATIC        shift, and go to state 4
    AUTO          shift, and go to state 5
    REGISTER      shift, and go to state 6
    INLINE        shift, and go to state 7
    CONST         shift, and go to state 8
    RESTRICT      shift, and go to state 9
    VOLATILE      shift, and go to state 10
    BOOL          shift, and go to state 11
    CHAR          shift, and go to state 12
    SHORT         shift, and go to state 13
    INT           shift, and go to state 14
    LONG          shift, and go to state 15
    SIGNED        shift, and go to state 16
    UNSIGNED      shift, and go to state 17
    FLOAT         shift, and go to state 18
    DOUBLE        shift, and go to state 19
    VOID          shift, and go to state 20
    COMPLEX       shift, and go to state 21
    IMAGINARY     shift, and go to state 22
    STRUCT        shift, and go to state 23
    UNION         shift, and go to state 24
    ENUM          shift, and go to state 25
    ALIGNAS       shift, and go to state 26
    ATOMIC        shift, and go to state 27
    NORETURN      shift, and go to state 28
    THREAD_LOCAL  shift, and go to state 30

    $default  reduce using rule 101 (declaration_specifiers)

    declaration_specifiers     go to state 60
    storage_class_specifier    go to state 33
    type_specifier             go to state 34
    struct_or_union_specifier  go to state 35
    struct_or_union            go to state 36
    enum_specifier             go to state 37
    atomic_type_specifier      go to state 38
    type_qualifier             go to state 39
    function_specifier         go to state 40
    alignment_specifier        go to state 41


State 34

  102 declaration_specifiers: type_specifier • declaration_specifiers
  103                       | type_specifier •

    TYPEDEF_NAME  shift, and go to state 1
    TYPEDEF       shift, and go to state 2
    EXTERN        shift, and go to state 3
    STATIC        shift, and go to state 4
    AUTO          shift, and go to state 5
    REGISTER      shift, and go to state 6
    INLINE        shift, and go to state 7
    CONST         shift, and go to state 8
    RESTRICT      shift, and go to state 9
    VOLATILE      shift, and go to state 10
    BOOL          shift, and go to state 11
    CHAR          shift, and go to state 12
    SHORT         shift, and go to state 13
    INT           shift, and go to state 14
    LONG          shift, and go to state 15
    SIGNED        shift, and go to state 16
    UNSIGNED      shift, and go to state 17
    FLOAT         shift, and go to state 18
    DOUBLE        shift, and go to state 19
    VOID          shift, and go to state 20
    COMPLEX       shift, and go to state 21
    IMAGINARY     shift, and go to state 22
    STRUCT        shift, and go to state 23
    UNION         shift, and go to state 24
    ENUM          shift, and go to state 25
    ALIGNAS       shift, and go to state 26
    ATOMIC        shift, and go to state 27
    NORETURN      shift, and go to state 28
    THREAD_LOCAL  shift, and go to state 30

    $default  reduce using rule 103 (declaration_specifiers)

    declaration_specifiers     go to state 61
    storage_class_specifier    go to state 33
    type_specifier             go to state 34
    struct_or_union_specifier  go to state 35
    struct_or_union            go to state 36
    enum_specifier             go to state 37
    atomic_type_specifier      go to state 38
    type_qualifier             go to state 39
    function_specifier         go to state 40
    alignment_specifier        go to state 41


State 35

  133 type_specifier: struct_or_union_specifier •

    $default  reduce using rule 133 (type_specifier)


State 36

  136 struct_or_union_specifier: struct_or_union • '{' struct_declaration_list '}'
  137                          | struct_or_union • IDENTIFIER '{' struct_declaration_list '}'
  138                          | struct_or_union • IDENTIFIER

    IDENTIFIER  shift, and go to state 62
    '{'         shift, and go to state 63


State 37

  134 type_specifier: enum_specifier •

    $default  reduce using rule 134 (type_specifier)


State 38

  132 type_specifier: atomic_type_specifier •

    $default  reduce using rule 132 (type_specifier)


State 39

  104 declaration_specifiers: type_qualifier • declaration_specifiers
  105                       | type_qualifier •

    TYPEDEF_NAME  shift, and go to state 1
    TYPEDEF       shift, and go to state 2
    EXTERN        shift, and go to state 3
    STATIC        shift, and go to state 4
    AUTO          shift, and go to state 5
    REGISTER      shift, and go to state 6
    INLINE        shift, and go to state 7
    CONST         shift, and go to state 8
    RESTRICT      shift, and go to state 9
    VOLATILE      shift, and go to state 10
    BOOL          shift, and go to state 11
    CHAR          shift, and go to state 12
    SHORT         shift, and go to state 13
    INT           shift, and go to state 14
    LONG          shift, and go to state 15
    SIGNED        shift, and go to state 16
    UNSIGNED      shift, and go to state 17
    FLOAT         shift, and go to state 18
    DOUBLE        shift, and go to state 19
    VOID          shift, and go to state 20
    COMPLEX       shift, and go to state 21
    IMAGINARY     shift, and go to state 22
    STRUCT        shift, and go to state 23
    UNION         shift, and go to state 24
    ENUM          shift, and go to state 25
    ALIGNAS       shift, and go to state 26
    ATOMIC        shift, and go to state 27
    NORETURN      shift, and go to state 28
    THREAD_LOCAL  shift, and go to state 30

    $default  reduce using rule 105 (declaration_specifiers)
